fixed css - removed dropdown hover menu on mobile and fixed flex-center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -865,7 +865,7 @@ footer.page-footer .call-to-action ul li {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     font-size:12px;
     left: 50%;
-transform: translate(-50%); 
+  transform: translate(-50%); 
 }
 
 .dropdown-content-red {
@@ -904,4 +904,19 @@ transform: translate(-50%);
 
 .fa-bars {
   color:black;
+}
+
+@media only screen and (max-width: 768px) {
+  .dropdown:hover .dropdown-content-blue, .dropdown:hover .dropdown-content-red{
+  display: none;
+  }
+  .dropdown:hover .dropbtn-red {
+    background-color:transparent;
+  }
+  .dropdown:hover .dropbtn-blue {
+    background-color:transparent;
+  }
+  .flex-center-main {
+    right:120px;
+}
 }
